--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "zenduit-usecase",
   "version": "0.0.0",
+  "engines": {
+    "node": "20.18.1",
+    "npm": "10.8.2"
+  },
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
